--- a/app/src/main/res/values/ThemesLogin.xml
+++ b/app/src/main/res/values/ThemesLogin.xml
@@ -1,17 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.FitnessBodybuilding" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
+    <style name="Base.Theme.Login_Register" parent="Theme.Material3.DayNight">
+        <!-- Customize your dark theme here. -->
+        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
+        <item name="colorOnPrimary">@color/colorWhite</item>
+
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="colorOnSecondary">@color/colorBlack</item>
     </style>
 
     <style name="Base.Theme.Login_Register.NoActionBar" parent="Theme.Material3.DayNight.NoActionBar">
@@ -53,15 +51,4 @@
         <item name="android:backgroundTint">?attr/colorOnPrimary</item>
     </style>
 
-
-    <style name="Theme.FitnessBodybuilding.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
-    
-
-    <style name="Theme.FitnessBodybuilding.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="Theme.FitnessBodybuilding.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
