--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -5,8 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back_login"
     tools:context=".ui.RegistrationActivity">
-
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="150dp"
@@ -42,6 +42,7 @@
         android:layout_marginEnd="30dp"
         android:ems="10"
         android:hint="Cognome"
+
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
