--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back_login"
-    tools:context=".ui.RegistrationActivity">
+    tools:context=".ui.ClassiEsecutive.RegistrationActivity">
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="150dp"
@@ -121,14 +121,25 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextText6" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnReg"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="90dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="90dp"
         android:text="Registrati"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextText7" />
+
+    <TextView
+        android:id="@+id/hoAcc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ho già un Account"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnReg" />
 </androidx.constraintlayout.widget.ConstraintLayout>
