--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,15 +6,18 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:id="@+id/nav_esercizi"
+            android:title="@string/menu_esercizi" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_scheda"
+            android:title="@string/menu_scheda"/>
+        <item
+            android:id="@+id/nav_cal"
+            android:title="@string/menu_calendario" />
+        <item
+            android:id="@+id/nav_timer"
+            android:title="@string/menu_timer" />
     </group>
 </menu>
