--- a/app/src/main/res/values/LoginRegistration.xml
+++ b/app/src/main/res/values/LoginRegistration.xml
@@ -31,6 +31,7 @@
 
     <style name="app_textViewStyle" parent="@android:style/Widget.TextView">
         <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:textSize">20dp</item>
     </style>
 
     <style name="app_editTextStyle" parent="@android:style/Widget.EditText">
