Calendario quasi funzionante

--- a/app/src/main/res/layout/fragment_calendario.xml
+++ b/app/src/main/res/layout/fragment_calendario.xml
@@ -1,22 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/sfondo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.calendario.TimerFragment">
+    android:orientation="vertical"
+    tools:context=".ui.calendario.CalendarioFragment">
 
     <TextView
-        android:id="@+id/text_gallery"
-        android:layout_width="match_parent"
+        android:id="@+id/testo"
+        android:layout_width="298dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginTop="48dp"
+        android:text="Clicca sulla data da modificare"
         android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:textColor="@color/colorBlack"
+        android:textSize="30dp" />
+
+    <LinearLayout
+        android:id="@+id/cal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <CalendarView
+            android:id="@+id/calend"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp" />
+    </LinearLayout>
+</LinearLayout>
