--- a/app/src/main/res/layout/fragment_calendario.xml
+++ b/app/src/main/res/layout/fragment_calendario.xml
@@ -1,28 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/sfondo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ui.calendario.CalendarioFragment">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/testo"
-        android:layout_width="298dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="55dp"
+        android:layout_gravity="center"
         android:layout_marginTop="48dp"
         android:text="Clicca sulla data da modificare"
         android:textAlignment="center"
         android:textColor="@color/colorBlack"
-        android:textSize="30dp" />
+        android:textSize="30sp" />
 
     <LinearLayout
         android:id="@+id/cal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <CalendarView
             android:id="@+id/calend"
