--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -7,12 +7,16 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="288dp"
+        android:layout_height="47dp"
         android:layout_marginStart="157dp"
         android:layout_marginTop="74dp"
         android:layout_marginEnd="153dp"
         android:text="Scegli esercizio:"
+        android:textAlignment="center"
+        android:textColor="#D90000"
+        android:textSize="26dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,16 +27,19 @@
         android:layout_height="54dp"
         android:layout_below="@id/textView"
         android:layout_marginStart="106dp"
-        android:layout_marginTop="53dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="106dp"
+        android:scrollbarSize="8dp"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <ImageView
         android:id="@+id/exerciseImage"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="197dp"
+        android:layout_height="185dp"
         android:layout_below="@id/exerciseSpinner"
         android:layout_marginStart="130dp"
         android:layout_marginTop="48dp"
@@ -44,37 +51,43 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="276dp"
+        android:layout_height="51dp"
         android:layout_marginStart="158dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="44dp"
         android:layout_marginEnd="159dp"
-        android:text="Button"
+        android:text="Aggiungi alla Scheda"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/muscleGroup" />
 
     <TextView
         android:id="@+id/muscleGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="274dp"
+        android:layout_height="27dp"
         android:layout_marginStart="176dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="177dp"
         android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <TextView
         android:id="@+id/textView12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="195dp"
+        android:layout_height="41dp"
         android:layout_marginStart="142dp"
         android:layout_marginTop="21dp"
         android:layout_marginEnd="142dp"
         android:text="Muscoli Interessati:"
+        android:textAlignment="center"
+        android:textColor="#2196F3"
+        android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/exerciseImage" />
