--- a/app/src/main/res/layout/layout_inserimento_scheda.xml
+++ b/app/src/main/res/layout/layout_inserimento_scheda.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/nomePopUp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="In quale scheda vorresti inserirlo?"
