--- a/app/src/main/res/layout/activity_esercizi.xml
+++ b/app/src/main/res/layout/activity_esercizi.xml
@@ -45,6 +45,17 @@
                 android:textStyle="bold" />
 
         </ScrollView>
+        <Button
+            android:id="@+id/buttonDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="16dp"
+            android:text="Elimina Scheda"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </LinearLayout>
 
